{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 314,
  "lineage": "1fd35aba-bfe1-7a67-47af-3174af34976c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dcd9d2934869bc44",
            "arn": "arn:aws:ec2:us-east-1:094522691730:elastic-ip/eipalloc-0dcd9d2934869bc44",
            "association_id": "eipassoc-0dc78c93d64cf8218",
            "domain": "vpc",
            "id": "eipalloc-0dcd9d2934869bc44",
            "network_border_group": "us-east-1",
            "network_interface": "eni-034acd80c7d87296f",
            "private_dns": "ip-10-0-1-133.ec2.internal",
            "private_ip": "10.0.1.133",
            "public_dns": "ec2-54-85-161-176.compute-1.amazonaws.com",
            "public_ip": "54.85.161.176",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:094522691730:internet-gateway/igw-0e0396d1a8e2eb6e1",
            "id": "igw-0e0396d1a8e2eb6e1",
            "owner_id": "094522691730",
            "tags": {
              "Name": "a10-igw"
            },
            "tags_all": {
              "Name": "a10-igw"
            },
            "vpc_id": "vpc-0a95d3082c3e1a2bb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:094522691730:loadbalancer/app/a10-alb/ef66a94dc78d003f",
            "arn_suffix": "app/a10-alb/ef66a94dc78d003f",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "a10-alb-895660871.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:094522691730:loadbalancer/app/a10-alb/ef66a94dc78d003f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "a10-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0ce197ff5304b3114"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0047614d4c9014be5"
              },
              {
                "subnet_id": "subnet-041d9f3e2bcfbf201"
              }
            ],
            "subnets": [
              "subnet-0047614d4c9014be5",
              "subnet-041d9f3e2bcfbf201"
            ],
            "tags": {
              "Name": "a10-alb"
            },
            "tags_all": {
              "Name": "a10-alb"
            },
            "vpc_id": "vpc-0a95d3082c3e1a2bb",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "node-0",
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:094522691730:loadbalancer/net/a10-node-0-nlb/57b3d4a72a81798a",
            "arn_suffix": "net/a10-node-0-nlb/57b3d4a72a81798a",
            "dns_name": "a10-node-0-nlb-57b3d4a72a81798a.elb.us-east-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:094522691730:loadbalancer/net/a10-node-0-nlb/57b3d4a72a81798a",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "a10-node-0-nlb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0128a8af8b908bca9"
              },
              {
                "subnet_id": "subnet-069fca84fcbac4b5c"
              }
            ],
            "subnets": [
              "subnet-0128a8af8b908bca9",
              "subnet-069fca84fcbac4b5c"
            ],
            "tags": {
              "Name": "a10-node-0-nlb"
            },
            "tags_all": {
              "Name": "a10-node-0-nlb"
            },
            "vpc_id": "vpc-0a95d3082c3e1a2bb",
            "zone_id": "Z26RNL4JYFTOTI"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "node-1",
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:094522691730:loadbalancer/net/a10-node-1-nlb/0bbbc83a467dc1d2",
            "arn_suffix": "net/a10-node-1-nlb/0bbbc83a467dc1d2",
            "dns_name": "a10-node-1-nlb-0bbbc83a467dc1d2.elb.us-east-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:094522691730:loadbalancer/net/a10-node-1-nlb/0bbbc83a467dc1d2",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "a10-node-1-nlb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0128a8af8b908bca9"
              },
              {
                "subnet_id": "subnet-069fca84fcbac4b5c"
              }
            ],
            "subnets": [
              "subnet-0128a8af8b908bca9",
              "subnet-069fca84fcbac4b5c"
            ],
            "tags": {
              "Name": "a10-node-1-nlb"
            },
            "tags_all": {
              "Name": "a10-node-1-nlb"
            },
            "vpc_id": "vpc-0a95d3082c3e1a2bb",
            "zone_id": "Z26RNL4JYFTOTI"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "node-2",
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:094522691730:loadbalancer/net/a10-node-2-nlb/44a121954e7bbf4b",
            "arn_suffix": "net/a10-node-2-nlb/44a121954e7bbf4b",
            "dns_name": "a10-node-2-nlb-44a121954e7bbf4b.elb.us-east-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:094522691730:loadbalancer/net/a10-node-2-nlb/44a121954e7bbf4b",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "a10-node-2-nlb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0128a8af8b908bca9"
              },
              {
                "subnet_id": "subnet-069fca84fcbac4b5c"
              }
            ],
            "subnets": [
              "subnet-0128a8af8b908bca9",
              "subnet-069fca84fcbac4b5c"
            ],
            "tags": {
              "Name": "a10-node-2-nlb"
            },
            "tags_all": {
              "Name": "a10-node-2-nlb"
            },
            "vpc_id": "vpc-0a95d3082c3e1a2bb",
            "zone_id": "Z26RNL4JYFTOTI"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "node-3",
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:094522691730:loadbalancer/net/a10-node-3-nlb/d7b1dd207778e782",
            "arn_suffix": "net/a10-node-3-nlb/d7b1dd207778e782",
            "dns_name": "a10-node-3-nlb-d7b1dd207778e782.elb.us-east-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:094522691730:loadbalancer/net/a10-node-3-nlb/d7b1dd207778e782",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "a10-node-3-nlb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0128a8af8b908bca9"
              },
              {
                "subnet_id": "subnet-069fca84fcbac4b5c"
              }
            ],
            "subnets": [
              "subnet-0128a8af8b908bca9",
              "subnet-069fca84fcbac4b5c"
            ],
            "tags": {
              "Name": "a10-node-3-nlb"
            },
            "tags_all": {
              "Name": "a10-node-3-nlb"
            },
            "vpc_id": "vpc-0a95d3082c3e1a2bb",
            "zone_id": "Z26RNL4JYFTOTI"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "node-4",
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:094522691730:loadbalancer/net/a10-node-4-nlb/3fc6658d88d331f9",
            "arn_suffix": "net/a10-node-4-nlb/3fc6658d88d331f9",
            "dns_name": "a10-node-4-nlb-3fc6658d88d331f9.elb.us-east-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:094522691730:loadbalancer/net/a10-node-4-nlb/3fc6658d88d331f9",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "a10-node-4-nlb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0128a8af8b908bca9"
              },
              {
                "subnet_id": "subnet-069fca84fcbac4b5c"
              }
            ],
            "subnets": [
              "subnet-0128a8af8b908bca9",
              "subnet-069fca84fcbac4b5c"
            ],
            "tags": {
              "Name": "a10-node-4-nlb"
            },
            "tags_all": {
              "Name": "a10-node-4-nlb"
            },
            "vpc_id": "vpc-0a95d3082c3e1a2bb",
            "zone_id": "Z26RNL4JYFTOTI"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:094522691730:listener/app/a10-alb/ef66a94dc78d003f/cec9d46c00ac9c09",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:094522691730:targetgroup/a10-leader-tg/491389f61ce1f390",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:094522691730:listener/app/a10-alb/ef66a94dc78d003f/cec9d46c00ac9c09",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:094522691730:loadbalancer/app/a10-alb/ef66a94dc78d003f",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.leader",
            "aws_security_group.alb",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "node-0",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:094522691730:listener/net/a10-node-0-nlb/57b3d4a72a81798a/a84d688d7aac921f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:094522691730:targetgroup/a10-node-0-tg/47726ceb84b21c53",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:094522691730:listener/net/a10-node-0-nlb/57b3d4a72a81798a/a84d688d7aac921f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:094522691730:loadbalancer/net/a10-node-0-nlb/57b3d4a72a81798a",
            "mutual_authentication": [],
            "port": 8080,
            "protocol": "TCP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": null,
            "routing_http_response_access_control_allow_headers_header_value": null,
            "routing_http_response_access_control_allow_methods_header_value": null,
            "routing_http_response_access_control_allow_origin_header_value": null,
            "routing_http_response_access_control_expose_headers_header_value": null,
            "routing_http_response_access_control_max_age_header_value": null,
            "routing_http_response_content_security_policy_header_value": null,
            "routing_http_response_server_enabled": null,
            "routing_http_response_strict_transport_security_header_value": null,
            "routing_http_response_x_content_type_options_header_value": null,
            "routing_http_response_x_frame_options_header_value": null,
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": 350,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.nodes",
            "aws_lb_target_group.nodes",
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "node-1",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:094522691730:listener/net/a10-node-1-nlb/0bbbc83a467dc1d2/f9fa2df9066372d2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:094522691730:targetgroup/a10-node-1-tg/e28891d6e875d5ec",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:094522691730:listener/net/a10-node-1-nlb/0bbbc83a467dc1d2/f9fa2df9066372d2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:094522691730:loadbalancer/net/a10-node-1-nlb/0bbbc83a467dc1d2",
            "mutual_authentication": [],
            "port": 8080,
            "protocol": "TCP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": null,
            "routing_http_response_access_control_allow_headers_header_value": null,
            "routing_http_response_access_control_allow_methods_header_value": null,
            "routing_http_response_access_control_allow_origin_header_value": null,
            "routing_http_response_access_control_expose_headers_header_value": null,
            "routing_http_response_access_control_max_age_header_value": null,
            "routing_http_response_content_security_policy_header_value": null,
            "routing_http_response_server_enabled": null,
            "routing_http_response_strict_transport_security_header_value": null,
            "routing_http_response_x_content_type_options_header_value": null,
            "routing_http_response_x_frame_options_header_value": null,
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": 350,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.nodes",
            "aws_lb_target_group.nodes",
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "node-2",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:094522691730:listener/net/a10-node-2-nlb/44a121954e7bbf4b/b1d63232581e9ac7",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:094522691730:targetgroup/a10-node-2-tg/d2b14a5965846407",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:094522691730:listener/net/a10-node-2-nlb/44a121954e7bbf4b/b1d63232581e9ac7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:094522691730:loadbalancer/net/a10-node-2-nlb/44a121954e7bbf4b",
            "mutual_authentication": [],
            "port": 8080,
            "protocol": "TCP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": null,
            "routing_http_response_access_control_allow_headers_header_value": null,
            "routing_http_response_access_control_allow_methods_header_value": null,
            "routing_http_response_access_control_allow_origin_header_value": null,
            "routing_http_response_access_control_expose_headers_header_value": null,
            "routing_http_response_access_control_max_age_header_value": null,
            "routing_http_response_content_security_policy_header_value": null,
            "routing_http_response_server_enabled": null,
            "routing_http_response_strict_transport_security_header_value": null,
            "routing_http_response_x_content_type_options_header_value": null,
            "routing_http_response_x_frame_options_header_value": null,
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": 350,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.nodes",
            "aws_lb_target_group.nodes",
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "node-3",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:094522691730:listener/net/a10-node-3-nlb/d7b1dd207778e782/656903f29d0aa7b1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:094522691730:targetgroup/a10-node-3-tg/52a0e502fb363ec0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:094522691730:listener/net/a10-node-3-nlb/d7b1dd207778e782/656903f29d0aa7b1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:094522691730:loadbalancer/net/a10-node-3-nlb/d7b1dd207778e782",
            "mutual_authentication": [],
            "port": 8080,
            "protocol": "TCP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": null,
            "routing_http_response_access_control_allow_headers_header_value": null,
            "routing_http_response_access_control_allow_methods_header_value": null,
            "routing_http_response_access_control_allow_origin_header_value": null,
            "routing_http_response_access_control_expose_headers_header_value": null,
            "routing_http_response_access_control_max_age_header_value": null,
            "routing_http_response_content_security_policy_header_value": null,
            "routing_http_response_server_enabled": null,
            "routing_http_response_strict_transport_security_header_value": null,
            "routing_http_response_x_content_type_options_header_value": null,
            "routing_http_response_x_frame_options_header_value": null,
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": 350,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.nodes",
            "aws_lb_target_group.nodes",
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "node-4",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:094522691730:listener/net/a10-node-4-nlb/3fc6658d88d331f9/2a40a672c6efe80e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:094522691730:targetgroup/a10-node-4-tg/1a6d85196ece40b3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:094522691730:listener/net/a10-node-4-nlb/3fc6658d88d331f9/2a40a672c6efe80e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:094522691730:loadbalancer/net/a10-node-4-nlb/3fc6658d88d331f9",
            "mutual_authentication": [],
            "port": 8080,
            "protocol": "TCP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": null,
            "routing_http_response_access_control_allow_headers_header_value": null,
            "routing_http_response_access_control_allow_methods_header_value": null,
            "routing_http_response_access_control_allow_origin_header_value": null,
            "routing_http_response_access_control_expose_headers_header_value": null,
            "routing_http_response_access_control_max_age_header_value": null,
            "routing_http_response_content_security_policy_header_value": null,
            "routing_http_response_server_enabled": null,
            "routing_http_response_strict_transport_security_header_value": null,
            "routing_http_response_x_content_type_options_header_value": null,
            "routing_http_response_x_frame_options_header_value": null,
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": 350,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.nodes",
            "aws_lb_target_group.nodes",
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "leader",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:094522691730:targetgroup/a10-leader-tg/491389f61ce1f390",
            "arn_suffix": "targetgroup/a10-leader-tg/491389f61ce1f390",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:094522691730:targetgroup/a10-leader-tg/491389f61ce1f390",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:094522691730:loadbalancer/app/a10-alb/ef66a94dc78d003f"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "a10-leader-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "a10-leader-tg"
            },
            "tags_all": {
              "Name": "a10-leader-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a95d3082c3e1a2bb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "node-0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:094522691730:targetgroup/a10-node-0-tg/47726ceb84b21c53",
            "arn_suffix": "targetgroup/a10-node-0-tg/47726ceb84b21c53",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200-399",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:094522691730:targetgroup/a10-node-0-tg/47726ceb84b21c53",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:094522691730:loadbalancer/net/a10-node-0-nlb/57b3d4a72a81798a"
            ],
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "a10-node-0-tg",
            "port": 8080,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "a10-node-0-tg"
            },
            "tags_all": {
              "Name": "a10-node-0-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a95d3082c3e1a2bb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "node-1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:094522691730:targetgroup/a10-node-1-tg/e28891d6e875d5ec",
            "arn_suffix": "targetgroup/a10-node-1-tg/e28891d6e875d5ec",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200-399",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:094522691730:targetgroup/a10-node-1-tg/e28891d6e875d5ec",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:094522691730:loadbalancer/net/a10-node-1-nlb/0bbbc83a467dc1d2"
            ],
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "a10-node-1-tg",
            "port": 8080,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "a10-node-1-tg"
            },
            "tags_all": {
              "Name": "a10-node-1-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a95d3082c3e1a2bb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "node-2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:094522691730:targetgroup/a10-node-2-tg/d2b14a5965846407",
            "arn_suffix": "targetgroup/a10-node-2-tg/d2b14a5965846407",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200-399",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:094522691730:targetgroup/a10-node-2-tg/d2b14a5965846407",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:094522691730:loadbalancer/net/a10-node-2-nlb/44a121954e7bbf4b"
            ],
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "a10-node-2-tg",
            "port": 8080,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "a10-node-2-tg"
            },
            "tags_all": {
              "Name": "a10-node-2-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a95d3082c3e1a2bb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "node-3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:094522691730:targetgroup/a10-node-3-tg/52a0e502fb363ec0",
            "arn_suffix": "targetgroup/a10-node-3-tg/52a0e502fb363ec0",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200-399",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:094522691730:targetgroup/a10-node-3-tg/52a0e502fb363ec0",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:094522691730:loadbalancer/net/a10-node-3-nlb/d7b1dd207778e782"
            ],
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "a10-node-3-tg",
            "port": 8080,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "a10-node-3-tg"
            },
            "tags_all": {
              "Name": "a10-node-3-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a95d3082c3e1a2bb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "node-4",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:094522691730:targetgroup/a10-node-4-tg/1a6d85196ece40b3",
            "arn_suffix": "targetgroup/a10-node-4-tg/1a6d85196ece40b3",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200-399",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:094522691730:targetgroup/a10-node-4-tg/1a6d85196ece40b3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:094522691730:loadbalancer/net/a10-node-4-nlb/3fc6658d88d331f9"
            ],
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "a10-node-4-tg",
            "port": 8080,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "a10-node-4-tg"
            },
            "tags_all": {
              "Name": "a10-node-4-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a95d3082c3e1a2bb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dcd9d2934869bc44",
            "association_id": "eipassoc-0dc78c93d64cf8218",
            "connectivity_type": "public",
            "id": "nat-0ebf4dee39ef8f63e",
            "network_interface_id": "eni-034acd80c7d87296f",
            "private_ip": "10.0.1.133",
            "public_ip": "54.85.161.176",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0047614d4c9014be5",
            "tags": {
              "Name": "a10-nat"
            },
            "tags_all": {
              "Name": "a10-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:094522691730:route-table/rtb-056f75227493a26e6",
            "id": "rtb-056f75227493a26e6",
            "owner_id": "094522691730",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ebf4dee39ef8f63e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "a10-private-rt"
            },
            "tags_all": {
              "Name": "a10-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a95d3082c3e1a2bb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:094522691730:route-table/rtb-022875d01ff26f5a6",
            "id": "rtb-022875d01ff26f5a6",
            "owner_id": "094522691730",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e0396d1a8e2eb6e1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "a10-public-rt"
            },
            "tags_all": {
              "Name": "a10-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a95d3082c3e1a2bb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06501febbaedd828c",
            "route_table_id": "rtb-056f75227493a26e6",
            "subnet_id": "subnet-0128a8af8b908bca9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private_a",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e0b4a86dbbeac5f",
            "route_table_id": "rtb-056f75227493a26e6",
            "subnet_id": "subnet-069fca84fcbac4b5c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private_b",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f04fddc1e06a5e8e",
            "route_table_id": "rtb-022875d01ff26f5a6",
            "subnet_id": "subnet-0047614d4c9014be5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0745c093eb2e4fe1b",
            "route_table_id": "rtb-022875d01ff26f5a6",
            "subnet_id": "subnet-041d9f3e2bcfbf201"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:094522691730:security-group/sg-0ce197ff5304b3114",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ce197ff5304b3114",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "a10-alb-sg",
            "name_prefix": "",
            "owner_id": "094522691730",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "a10-alb-sg"
            },
            "tags_all": {
              "Name": "a10-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a95d3082c3e1a2bb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:094522691730:security-group/sg-01b8430c3582e47af",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01b8430c3582e47af",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "a10-nodes-sg",
            "name_prefix": "",
            "owner_id": "094522691730",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "a10-nodes-sg"
            },
            "tags_all": {
              "Name": "a10-nodes-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a95d3082c3e1a2bb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:094522691730:subnet/subnet-0128a8af8b908bca9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0128a8af8b908bca9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "094522691730",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "a10-private-a"
            },
            "tags_all": {
              "Name": "a10-private-a"
            },
            "vpc_id": "vpc-0a95d3082c3e1a2bb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:094522691730:subnet/subnet-069fca84fcbac4b5c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-069fca84fcbac4b5c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "094522691730",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "a10-private-b"
            },
            "tags_all": {
              "Name": "a10-private-b"
            },
            "vpc_id": "vpc-0a95d3082c3e1a2bb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:094522691730:subnet/subnet-0047614d4c9014be5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0047614d4c9014be5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "094522691730",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "a10-public-a"
            },
            "tags_all": {
              "Name": "a10-public-a"
            },
            "vpc_id": "vpc-0a95d3082c3e1a2bb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:094522691730:subnet/subnet-041d9f3e2bcfbf201",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041d9f3e2bcfbf201",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "094522691730",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "a10-public-b"
            },
            "tags_all": {
              "Name": "a10-public-b"
            },
            "vpc_id": "vpc-0a95d3082c3e1a2bb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:094522691730:vpc/vpc-0a95d3082c3e1a2bb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09827e3486f5e888f",
            "default_route_table_id": "rtb-0eef0c85791356df8",
            "default_security_group_id": "sg-0022e20a93563caf6",
            "dhcp_options_id": "dopt-0c213409de7878a6e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a95d3082c3e1a2bb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0eef0c85791356df8",
            "owner_id": "094522691730",
            "tags": {
              "Name": "a10-vpc"
            },
            "tags_all": {
              "Name": "a10-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}